# objectpool

./: .gitignore  CMakeLists.txt  ObjectPool.sln
ObjectPool/: ObjectPool.hpp  ObjectPool.vcxproj  ObjectPool.vcxproj.filters  ObjectPoolApp.cpp  ObjectPool_list.hpp  ReadMe.txt  main.cpp  stdafx.cpp
new/: CMakeLists.txt
new/PoolAllocator/: Allocator.hpp  HeapPolicy.hpp  ListPoolPolicy.hpp  MemoryPool.cpp  MemoryPool.h  MemoryPool.hpp  ObjectTraits.hpp  SmallObjectPoolPolicy.hpp  main.cpp  main.cpp~RF14d490e6.TMP
new/PoolAllocator.xcodeproj/: project.pbxproj
new/PoolAllocator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
new/PoolAllocator.xcodeproj/project.xcworkspace/xcshareddata/: PoolAllocator.xccheckout
new/PoolAllocator.xcodeproj/project.xcworkspace/xcuserdata/destructor.xcuserdatad/: UserInterfaceState.xcuserstate
new/PoolAllocator.xcodeproj/xcuserdata/destructor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
new/PoolAllocator.xcodeproj/xcuserdata/destructor.xcuserdatad/xcschemes/: PoolAllocator.xcscheme  xcschememanagement.plist
new/PoolAllocator/example/: memmgr.cpp
old/: CMakeLists.txt
old/src/: AllocatorTraits.hpp  CMakeLists.txt  ObjectPool.hpp  ObjectTraits.hpp  SparseSet.h  main.cpp
old/src/test/: CMakeLists.txt  construction_destruction.cpp  handles.cpp  test_common.h  unit_tests.cpp  usage.cpp
src/: ObjectPool.hpp
